2000-06-26  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_CONFIG_LINKS, AC_CONFIG_HEADERS,
	AC_CONFIG_COMMANDS, AC_CONFIG_FILES): Use a shell variable instead
	of an m4 variable to store what must be done, so that sh
	conditionals are honored.
	(_AC_OUTPUT_LINKS, _AC_OUTPUT_HEADERS,
	_AC_OUTPUT_COMMANDS, _AC_OUTPUT_FILES): Adjust.
	* tests/semantics.m4: Test the four AC_CONFIG sisters.
	* doc/autoconf.texi (Configuration Actions): Promote the use of
	literals, show it works properly with sh conditionals.

2000-06-26  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_CACHE_VAL): Too many people put AC_DEFINE in
	the commands-to-set-it part of it.  Give them a warning.

2000-06-26  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Prerequisite Macros): More about AC_REQUIRE.

2000-06-26  Akim Demaille  <akim@epita.fr>

	Given better names to the diversions.

	* acgeneral.m4 (_AC_DIVERT(NORMAL_2), _AC_DIVERT(NORMAL_3),
	_AC_DIVERT(NORMAL_4)): Delete, unused.
	(_AC_DIVERT(NORMAL_1), _AC_DIVERT(NORMAL), AC_DIVERT_DIVERSION):
	Rename as _AC_DIVERT(PREPARE), _AC_DIVERT(BODY),
	_AC_DIVERT_DIVERSION.

2000-06-26  Akim Demaille  <akim@epita.fr>

	The current implementation of AC_REQUIRE fails on

	| AC_DEFUN([TEST1],  [REQUIRE([TEST2a])REQUIRE([TEST2b])])
	| AC_DEFUN([TEST2a], [])
	| AC_DEFUN([TEST2b], [REQUIRE([TEST3])])
	| AC_DEFUN([TEST3],  [REQUIRE([TEST2a])])
	|
	| AC_INIT
	| TEST1

	because it produces TEST3; TEST2a; TEST2b; TEST1.
	Fix this bug, implement the solution provided by Axel Thimm,
	and test AC_REQUIRE.

	* acgeneral.m4: Document this implementation.
	(_AC_DEFUN_PRO, _AC_DEFUN_EPI, AC_REQUIRE): Be sure that macros
	are emitted in the same order as they are expanded.
	(AC_REQUIRE): Forbid being calling out of an AC_DEFUN'd	macro (in
	particular the top level).
	* tests/base.m4 (AC_REQUIRE): New test.

2000-06-26  Akim Demaille  <akim@epita.fr>

	A macro which is not defined with AC_DEFUN should not be